# RAG_SYSTEM

./: .env.example  .gitignore  Dockerfile  README.md  config.py  data_ingestion.py  docker-compose.yml  document_processor.py  exceptions.py  init_db.py  main.py  pyproject.toml  rag_engine.py  requirements.txt  sample_articles.py  test_main.py  vector_store.py
helm/typeform-chatbot/: Chart.yaml  values.yaml
helm/typeform-chatbot/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
